--- a/index.html
+++ b/index.html
@@ -1,18 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eldritch</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap" rel="stylesheet">
+
     <link rel="icon" href="fav.svg">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main>
+        <h1>Eldritch Horror Game</h1>
+        <div class="first-step">
+            <h3>Выберите карту Древнего</h3>
+            <div class="cards-wrapper">
+                <div class="azathoth">
+                    <img class="card" src="./assets/Ancients/Azathoth.png" alt="Azathoth card">
+                </div>
+                <div class="cthulhu">
+                    <img class="card" src="./assets/Ancients/Cthulthu.png" alt="Cthulthu card">
+                </div>
+                <div class="iogSothoth">
+                    <img class="card" src="./assets/Ancients/IogSothoth.png" alt="IogSothoth card">
+                </div>
+                <div class="shubNiggurath">
+                    <img class="card" src="./assets/Ancients/ShubNiggurath.png" alt="ShubNiggurath card">
+                </div>
+            </div>
+            <h3>Выберите уровень сложности</h3>
+            <div class="level-wrapper">
+                <button class="level-button">Очень лёгкий</button>
+                <button class="level-button">Лёгкий</button>
+                <button class="level-button">Средний</button>
+                <button class="level-button">Высокий</button>
+                <button class="level-button">Очень высокий</button>
+            </div>
+            <button class="blend-button">Замешать колоду</button>
+        </div>
+        <div class="second-step hidden">
+            <div class="halfs">
+                <div class="half1">
+                    <div class="steps">
+                        <p>1 этап:</p>
+                        <div class="green1">0</div>
+                        <div class="brown1">0</div>
+                        <div class="blue1">0</div>
+                    </div>
+                    <div class="steps">
+                        <p>2 этап:</p>
+                        <div class="green2">0</div>
+                        <div class="brown2">0</div>
+                        <div class="blue2">0</div>
+                    </div>
+                    <div class="steps">
+                        <p>3 этап:</p>
+                        <div class="green3">0</div>
+                        <div class="brown3">0</div>
+                        <div class="blue3">0</div>
+                    </div>
+                </div>
+                <div class="half2">
+                    <h3>Колода мифов</h3>
+                    <div class="deck-wrapper">
+                        <div class="shirt">
+                            <img class="card-shirt" src="./assets/mythicCardBackground.png" alt="Card shirt">
+                        </div>
+                        <div class="deck"></div>
+                    </div>
+                </div>
+            </div>
+            <button class="back-button">Назад</button>
+        </div>
 
 
     </main>
-    <!-- <script src="index.js"></script> -->
+    <script src="myindex.js"></script>
 </body>
+
 </html>
