feat: add card and level select

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         <div class="second-step hidden">
             <div class="halfs">
                 <div class="half1">
+                    <div class="card-text">Карта "Azathoth"</div>
+                    <div class="level-text">Уровень сложности "Очень лёгкий"</div>
                     <div class="steps">
                         <p>1 этап:</p>
                         <div class="green1">0</div>
