feat: add cardsselect

--- a/index.html
+++ b/index.html
@@ -16,22 +16,24 @@
 </head>
 
 <body>
-    <main>
+    <header>
         <h1>Eldritch Horror Game</h1>
+    </header>
+    <main>        
         <div class="first-step">
             <h3>Выберите карту Древнего</h3>
             <div class="cards-wrapper">
                 <div class="azathoth">
-                    <img class="card" src="./assets/Ancients/Azathoth.png" alt="Azathoth card">
+                    <img class="card" src="./assets/Ancients/азатот.jpg" alt="Azathoth card">
                 </div>
                 <div class="cthulhu">
-                    <img class="card" src="./assets/Ancients/Cthulthu.png" alt="Cthulthu card">
+                    <img class="card" src="./assets/Ancients/ктулху.jpg" alt="Cthulthu card">
                 </div>
                 <div class="iogSothoth">
-                    <img class="card" src="./assets/Ancients/IogSothoth.png" alt="IogSothoth card">
+                    <img class="card" src="./assets/Ancients/йог.jpg" alt="IogSothoth card">
                 </div>
                 <div class="shubNiggurath">
-                    <img class="card" src="./assets/Ancients/ShubNiggurath.png" alt="ShubNiggurath card">
+                    <img class="card" src="./assets/Ancients/шуб.jpg" alt="ShubNiggurath card">
                 </div>
             </div>
             <h3>Выберите уровень сложности</h3>
@@ -51,28 +53,28 @@
                     <div class="level-text">Уровень сложности "Очень лёгкий"</div>
                     <div class="steps">
                         <p>1 этап:</p>
-                        <div class="green1">0</div>
-                        <div class="brown1">0</div>
-                        <div class="blue1">0</div>
+                        <div class="green1"></div>
+                        <div class="brown1"></div>
+                        <div class="blue1"></div>
                     </div>
                     <div class="steps">
                         <p>2 этап:</p>
-                        <div class="green2">0</div>
-                        <div class="brown2">0</div>
-                        <div class="blue2">0</div>
+                        <div class="green2"></div>
+                        <div class="brown2"></div>
+                        <div class="blue2"></div>
                     </div>
                     <div class="steps">
                         <p>3 этап:</p>
-                        <div class="green3">0</div>
-                        <div class="brown3">0</div>
-                        <div class="blue3">0</div>
+                        <div class="green3"></div>
+                        <div class="brown3"></div>
+                        <div class="blue3"></div>
                     </div>
                 </div>
                 <div class="half2">
                     <h3>Колода мифов</h3>
                     <div class="deck-wrapper">
                         <div class="shirt">
-                            <img class="card-shirt" src="./assets/mythicCardBackground.png" alt="Card shirt">
+                            <img class="card-shirt" src="./assets/рубашка2.jpg" alt="Card shirt">
                         </div>
                         <div class="deck"></div>
                     </div>
@@ -80,10 +82,15 @@
             </div>
             <button class="back-button">Назад</button>
         </div>
-
-
     </main>
-    <script src="myindex.js"></script>
+    <footer>
+        <p class="logo">2022</p>
+                <a class="logo" href="https://github.com/RallyZK" target="_blank"><img
+                        src="assets/github_logo_white.png" alt="GitHub Logo" width="60" height="15"></a>
+                <a class="logo" href="https://rs.school/js/" target="_blank"><img
+                        src="assets/rs_school_js_logo_White.png" alt="RS-School Logo" width="50" height="16"></a>
+    </footer>
+    <script type="module" src="myindex.js"></script>
 </body>
 
 </html>
