fix: change pics

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
             <h3>Выберите карту Древнего</h3>
             <div class="cards-wrapper">
                 <div class="azathoth">
-                    <img class="card" src="./assets/Ancients/азатот.jpg" alt="Azathoth card">
+                    <img class="card" src="https://raw.githubusercontent.com/RallyZK/eldritch-codejam/gh-pages/assets/Ancients/Azatot.jpg" alt="Azathoth card">
                 </div>
                 <div class="cthulhu">
-                    <img class="card" src="./assets/Ancients/ктулху.jpg" alt="Cthulthu card">
+                    <img class="card" src="./assets/Ancients/Ktylhu.jpg" alt="Cthulthu card">
                 </div>
                 <div class="iogSothoth">
-                    <img class="card" src="./assets/Ancients/йог.jpg" alt="IogSothoth card">
+                    <img class="card" src="./assets/Ancients/Yog.jpg" alt="IogSothoth card">
                 </div>
                 <div class="shubNiggurath">
-                    <img class="card" src="./assets/Ancients/шуб.jpg" alt="ShubNiggurath card">
+                    <img class="card" src="./assets/Ancients/Shub.jpg" alt="ShubNiggurath card">
                 </div>
             </div>
             <h3>Выберите уровень сложности</h3>
