fix: fix card img

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3>Выберите карту Древнего</h3>
             <div class="cards-wrapper">
                 <div class="azathoth">
-                    <img class="card" src="https://raw.githubusercontent.com/RallyZK/eldritch-codejam/gh-pages/assets/Ancients/Azatot.jpg" alt="Azathoth card">
+                    <img class="card" src="./assets/Ancients/Azatot.jpg" alt="Azathoth card">
                 </div>
                 <div class="cthulhu">
                     <img class="card" src="./assets/Ancients/Ktylhu.jpg" alt="Cthulthu card">
