--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>Eldritch Horror Game</h1>
+        <h1>Eldritch Horror Game Helper</h1>
     </header>
     <main>        
         <div class="first-step">
