--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -8,8 +8,10 @@
     <title>Eldritch</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
 
     <link rel="icon" href="fav.svg">
     <link rel="stylesheet" href="style.css">
@@ -19,7 +21,7 @@
     <header>
         <h1>Eldritch Horror Game Helper</h1>
     </header>
-    <main>        
+    <main>
         <div class="first-step">
             <h3>Выберите карту Древнего</h3>
             <div class="cards-wrapper">
@@ -84,11 +86,11 @@
         </div>
     </main>
     <footer>
-        <p class="logo">2022</p>
-                <a class="logo" href="https://github.com/RallyZK" target="_blank"><img
-                        src="assets/github_logo_white.png" alt="GitHub Logo" width="60" height="15"></a>
-                <a class="logo" href="https://rs.school/js/" target="_blank"><img
-                        src="assets/rs_school_js_logo_White.png" alt="RS-School Logo" width="50" height="16"></a>
+        <p class="logo"><b>2022</b></p>
+        <a class="logo" href="https://github.com/RallyZK" target="_blank"><img src="assets/github_logo_white.png"
+                alt="GitHub Logo" width="60" height="15"></a>
+        <a class="logo" href="https://rs.school/js/" target="_blank"><img src="assets/rs_school_js_logo_White.png"
+                alt="RS-School Logo" width="50" height="16"></a>
     </footer>
     <script type="module" src="myindex.js"></script>
 </body>
