--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                         <div class="deck"></div>
                         <div class="shirt">
                             <img class="card-shirt" src="./assets/рубашка2.jpg" alt="Card shirt">
+                            <p class="tap">TAP</p>
                         </div>
                     </div>
                 </div>
